<resources>
    <string name="app_name">TicTacToe</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="btn_play">Play</string>
    <string name="previous">Previous</string>
    <string name="tv_title">Tic Tac Toe</string>
    <string name="PlayerSetupTitle">Enter Your Name</string>
    <string name="tv_1">Player 1</string>
    <string name="tv_2">Player 2</string>
    <string name="btn_submit">Submit Names</string>
    <string name="name_hint">Enter Your Name</string>
    <string name="btn_back">Back</string>

</resources>